updateLocation endpoint + cleanup
