# docs/swagger.json
@@ -430,6 +430,44 @@
                 }
             }
         },
+        "/user/edit": {
+            "post": {
+                "description": "Edit user",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user/ private"
+                ],
+                "summary": "Edit user",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ProfileResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/errors.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/errors.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/errors.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/user/profile": {
             "get": {
                 "description": "Returns user data",
@@ -445,6 +483,44 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/dto.ProfileResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/errors.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/errors.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/updateLocation": {
+            "post": {
+                "description": "Update user location",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user/ private"
+                ],
+                "summary": "Update location",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ProfileResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/errors.ErrorResponse"
                         }
                     },
                     "401": {
@@ -683,16 +759,10 @@
                 }
             }
         },
-        "dto.UserResponse": {
+        "dto.UserMedicalInfo": {
             "type": "object",
             "properties": {
-                "accidentId": {
-                    "type": "integer"
-                },
                 "allergies": {
-                    "type": "string"
-                },
-                "bikeModel": {
                     "type": "string"
                 },
                 "bloodGroup": {
@@ -701,16 +771,39 @@
                 "chronicDiseases": {
                     "type": "string"
                 },
-                "code": {
+                "dateOfBirth": {
                     "type": "string"
                 },
-                "comment": {
+                "hasHepatitis": {
+                    "type": "string"
+                },
+                "hasHiv": {
+                    "type": "string"
+                },
+                "hasHypertension": {
+                    "type": "string"
+                },
+                "heightCm": {
+                    "type": "integer"
+                },
+                "medications": {
+                    "type": "string"
+                },
+                "weightKg": {
+                    "type": "integer"
+                }
+            }
+        },
+        "dto.UserResponse": {
+            "type": "object",
+            "properties": {
+                "accidentId": {
+                    "type": "integer"
+                },
+                "bikeModel": {
                     "type": "string"
                 },
                 "createdAt": {
-                    "type": "string"
-                },
-                "dateOfBirth": {
                     "type": "string"
                 },
                 "email": {
@@ -728,56 +821,32 @@
                 "geoUpdatedAt": {
                     "type": "string"
                 },
-                "hasHepatitis": {
-                    "type": "string"
-                },
-                "hasHiv": {
-                    "type": "string"
-                },
-                "hasHypertension": {
-                    "type": "string"
-                },
-                "heightCm": {
-                    "type": "integer"
-                },
                 "id": {
                     "type": "integer"
                 },
-                "isBanned": {
-                    "type": "boolean"
-                },
                 "isQrCodeEnabled": {
                     "type": "boolean"
-                },
-                "isVerified": {
-                    "type": "boolean"
-                },
-                "lastAuth": {
-                    "type": "string"
                 },
                 "lastName": {
                     "type": "string"
                 },
                 "latitude": {
-                    "type": "string"
+                    "type": "number"
                 },
                 "longitude": {
-                    "type": "string"
+                    "type": "number"
                 },
-                "medications": {
-                    "type": "string"
+                "medicalInfo": {
+                    "$ref": "#/definitions/dto.UserMedicalInfo"
                 },
                 "phone": {
                     "type": "string"
                 },
+                "qrCodeUrl": {
+                    "type": "string"
+                },
                 "username": {
                     "type": "string"
-                },
-                "uuid": {
-                    "type": "string"
-                },
-                "weightKg": {
-                    "type": "integer"
                 }
             }
         },
